Changes errors in activities

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,7 +19,9 @@
             android:layout_width="match_parent"
             android:layout_height="283dp"
             android:paddingLeft="10dp"
-            android:paddingRight="16dp">
+            android:paddingRight="16dp"
+            android:paddingEnd="16dp"
+            android:paddingStart="10dp">
 
             <ImageView
                 android:id="@+id/imgPerroRescatar"
@@ -38,7 +40,9 @@
                 android:layout_toRightOf="@+id/imgPerroRescatar"
                 android:background="@drawable/input"
                 android:contentDescription="@string/desc"
-                app:srcCompat="@drawable/camara" />
+                app:srcCompat="@drawable/camara"
+                android:layout_marginStart="-92dp"
+                android:layout_toEndOf="@+id/imgPerroRescatar" />
 
         </RelativeLayout>
 
@@ -46,15 +50,12 @@
             android:id="@+id/simpleProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:visibility="gone" />
 
         <TextView
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/progress_bar"
-            android:layout_alignLeft="@+id/progress_bar"
             tools:visibility="gone" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -69,7 +70,7 @@
                 android:layout_gravity="center"
                 android:ems="10"
                 android:gravity="start|top"
-                android:hint="Descripción"
+                android:hint="@string/descripci_n"
                 android:inputType="textMultiLine" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -97,7 +98,6 @@
                     android:id="@+id/imgBtnListar"
                     android:layout_width="125dp"
                     android:layout_height="125dp"
-                    android:layout_toRightOf="@+id/imgBtnGuardar"
                     android:background="@drawable/input"
                     android:contentDescription="@string/desc"
                     app:srcCompat="@drawable/checklist" />
@@ -106,7 +106,6 @@
                     android:id="@+id/imgBtnGrupoD"
                     android:layout_width="125dp"
                     android:layout_height="125dp"
-                    android:layout_toRightOf="@+id/imgBtnListar"
                     android:background="@drawable/input"
                     android:contentDescription="@string/desc"
                     app:srcCompat="@drawable/equipo" />
