--- a/app/src/main/res/layout-v21/activity_medical_evaluation.xml
+++ b/app/src/main/res/layout-v21/activity_medical_evaluation.xml
@@ -42,8 +42,10 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingEnd="16dp"
-                android:paddingStart="10dp">
+                android:paddingLeft="10dp"
+                android:paddingRight="16dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="16dp">
 
                 <ImageView
                     android:id="@+id/imgPerroEvaluacion"
@@ -60,11 +62,13 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="fill_horizontal|end"
                     android:layout_marginStart="-80dp"
+                    android:layout_marginLeft="-90dp"
                     android:layout_marginTop="100dp"
                     android:layout_toRightOf="@+id/imgPerroEvaluacion"
                     android:background="@drawable/input"
                     android:contentDescription="@string/desc"
-                    app:srcCompat="@drawable/camara" />
+                    app:srcCompat="@drawable/camara"
+                    android:layout_toEndOf="@+id/imgPerroEvaluacion" />
             </RelativeLayout>
         </LinearLayout>
 
@@ -77,7 +81,8 @@
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold"
-            tools:ignore="RtlSymmetry" />
+            tools:ignore="RtlSymmetry"
+            android:paddingStart="5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -85,7 +90,9 @@
             android:orientation="vertical"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
-            android:paddingRight="10dp">
+            android:paddingRight="10dp"
+            android:paddingEnd="10dp"
+            android:paddingStart="5dp">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -100,7 +107,8 @@
                     android:inputType="textMultiLine"
                     android:paddingLeft="5dp"
                     android:textSize="12sp"
-                    tools:ignore="RtlSymmetry" />
+                    tools:ignore="RtlSymmetry"
+                    android:paddingStart="5dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -113,10 +121,11 @@
                     android:id="@+id/txtEdadEvaluacion"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Edad aproximada"
+                    android:hint="@string/edad_aproximada"
                     android:paddingLeft="5dp"
                     android:textSize="12sp"
-                    tools:ignore="RtlSymmetry" />
+                    tools:ignore="RtlSymmetry"
+                    android:paddingStart="5dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -128,12 +137,13 @@
             android:id="@+id/lblFracturas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="5dp"
+            android:paddingLeft="5dp"
             android:text="@string/fracturas"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp"
             android:textStyle="bold"
-            tools:ignore="RtlSymmetry" />
+            tools:ignore="RtlSymmetry"
+            android:paddingStart="5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -142,6 +152,8 @@
             android:orientation="horizontal"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingStart="5dp"
             android:paddingEnd="10dp">
 
             <RadioGroup
@@ -183,7 +195,8 @@
                     android:paddingTop="10dp"
                     android:paddingEnd="10dp"
                     android:paddingRight="10dp"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:paddingStart="5dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
@@ -197,7 +210,8 @@
             android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp"
             android:textStyle="bold"
-            tools:ignore="RtlSymmetry" />
+            tools:ignore="RtlSymmetry"
+            android:paddingStart="5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -206,7 +220,9 @@
             android:orientation="horizontal"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
-            android:paddingRight="10dp">
+            android:paddingRight="10dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="10dp">
 
             <RadioGroup
                 android:layout_width="wrap_content"
@@ -281,12 +297,13 @@
             android:id="@+id/lblMedicamentos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="5dp"
+            android:paddingLeft="5dp"
             android:text="@string/medicamentos"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp"
             android:textStyle="bold"
-            tools:ignore="RtlSymmetry" />
+            tools:ignore="RtlSymmetry"
+            android:paddingStart="5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -294,7 +311,9 @@
             android:orientation="vertical"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
-            android:paddingRight="20dp">
+            android:paddingRight="20dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="20dp">
 
             <TableLayout
                 android:layout_width="match_parent"
@@ -308,8 +327,6 @@
                         android:id="@+id/cbxDrontal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
                         android:text="@string/drontal"
                         android:textSize="12sp" />
 
@@ -317,7 +334,6 @@
                         android:id="@+id/cbxRimadyltal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
                         android:text="@string/rimadyltal"
                         android:textSize="12sp" />
                 </TableRow>
@@ -330,8 +346,6 @@
                         android:id="@+id/cbxPipeta"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
                         android:text="@string/pipeta"
                         android:textSize="12sp" />
 
@@ -339,7 +353,6 @@
                         android:id="@+id/cbxEmulgel"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_centerHorizontal="true"
                         android:text="@string/emulgel"
                         android:textSize="12sp" />
 
@@ -353,7 +366,6 @@
                         android:id="@+id/cbxMeloxic"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
                         android:text="@string/meloxic"
                         android:textSize="12sp" />
 
@@ -361,8 +373,6 @@
                         android:id="@+id/cbxBrillo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
                         android:text="@string/brillo"
                         android:textSize="12sp" />
 
@@ -376,8 +386,6 @@
                         android:id="@+id/cbxCoccigan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
                         android:text="@string/coccigan"
                         android:textSize="12sp" />
 
@@ -407,10 +415,12 @@
                     android:gravity="start|top"
                     android:hint="@string/otrosMedicamentos"
                     android:inputType="textMultiLine"
-                    android:paddingStart="5dp"
+                    android:paddingLeft="5dp"
                     android:paddingTop="10dp"
                     android:paddingRight="10dp"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="10dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -423,7 +433,8 @@
             android:orientation="horizontal"
             android:paddingLeft="5dp"
             android:paddingRight="10dp"
-            android:paddingEnd="10dp">
+            android:paddingEnd="10dp"
+            android:paddingStart="5dp">
 
             <TextView
                 android:id="@+id/lblObservacionGeneral"
@@ -442,6 +453,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:paddingLeft="5dp"
             tools:ignore="RtlSymmetry"
             android:paddingStart="5dp">
 
@@ -474,8 +486,6 @@
                     android:id="@+id/cbxAdoptable"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="false"
                     android:text="@string/adoptable"
                     android:textSize="12sp" />
             </LinearLayout>
@@ -502,9 +512,10 @@
                         android:orientation="horizontal"
                         android:paddingLeft="5dp"
                         android:paddingTop="10dp"
-                        android:paddingEnd="10dp"
+                        android:paddingRight="10dp"
                         android:textSize="12sp"
-                        android:paddingStart="5dp" />
+                        android:paddingStart="5dp"
+                        android:paddingEnd="10dp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -522,7 +533,6 @@
                 android:id="@+id/simpleProgressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:visibility="gone" />
 
             <TextView
@@ -537,7 +547,7 @@
                 android:layout_height="match_parent"
                 android:drawablePadding="8dp"
                 android:paddingLeft="5dp"
-                android:text="Guardar"
+                android:text="@string/guardar"
                 android:textSize="16sp"
                 tools:ignore="RtlSymmetry"
                 android:paddingStart="5dp" />
