--- a/app/src/main/res/layout/row_recycler_medical_evaluation.xml
+++ b/app/src/main/res/layout/row_recycler_medical_evaluation.xml
@@ -29,7 +29,8 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     app:civ_border_color="@color/colorPrimaryDark"
-                    app:civ_border_width="2dp" />
+                    app:civ_border_width="2dp"
+                    android:layout_marginStart="5dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -41,52 +42,47 @@
                         android:id="@+id/lstEdad"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
-                        android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_marginStart="5dp" />
 
                     <TextView
                         android:id="@+id/lstTamano"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstEdad"
                         android:layout_marginLeft="5dp"
-                        android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_marginStart="5dp" />
 
                     <TextView
                         android:id="@+id/lstTipo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstTamano"
                         android:layout_marginLeft="5dp"
-                        android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_marginStart="5dp" />
 
                     <TextView
                         android:id="@+id/lstSexo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstTipo"
                         android:layout_marginLeft="5dp"
-                        android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_marginStart="5dp" />
 
                     <TextView
                         android:id="@+id/lstFracturas"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstSexo"
                         android:layout_marginLeft="5dp"
-                        android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_marginStart="5dp" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -98,7 +94,9 @@
             android:layout_height="1px"
             android:layout_marginLeft="100dp"
             android:layout_marginRight="5dp"
-            android:background="@color/colorPrimaryDark" />
+            android:background="@color/colorPrimaryDark"
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="100dp" />
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
