--- a/app/src/main/res/layout/row_recycler_medical_evaluation_list.xml
+++ b/app/src/main/res/layout/row_recycler_medical_evaluation_list.xml
@@ -16,7 +16,8 @@
             android:layout_marginLeft="5dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:textAlignment="center">
+            android:textAlignment="center"
+            android:layout_marginStart="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -30,7 +31,8 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     app:civ_border_color="@color/colorPrimaryDark"
-                    app:civ_border_width="2dp" />
+                    app:civ_border_width="2dp"
+                    android:layout_marginStart="5dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -42,64 +44,58 @@
                         android:id="@+id/lstEdadListEvaluacion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
-                        android:layout_toRightOf="@+id/imgListPerroEvaluado"
                         android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_marginStart="5dp" />
 
 
                     <TextView
                         android:id="@+id/lstSexoListEvaluacion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstTipo"
                         android:layout_marginLeft="5dp"
-                        android:layout_toRightOf="@+id/imgListPerroEvaluado"
                         android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_marginStart="5dp" />
 
                     <TextView
                         android:id="@+id/lstObservacionesListEvaluacion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstSexo"
                         android:layout_marginLeft="5dp"
-                        android:layout_toRightOf="@+id/imgListPerroEvaluado"
                         android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_marginStart="5dp" />
 
                     <TextView
                         android:id="@+id/lstFracturasListEvaluacion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstEdad"
                         android:layout_marginLeft="5dp"
-                        android:layout_toRightOf="@+id/imgListPerroEvaluado"
                         android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_marginStart="5dp" />
 
                     <TextView
                         android:id="@+id/lstTiempoListEvaluacion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstTamano"
                         android:layout_marginLeft="5dp"
-                        android:layout_toRightOf="@+id/imgListPerroEvaluado"
                         android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_marginStart="5dp" />
 
                     <TextView
                         android:id="@+id/lstEstadoListEvaluacion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
-                        android:layout_toRightOf="@+id/imgListPerroEvaluado"
                         android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_marginStart="5dp" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -111,7 +107,9 @@
             android:layout_height="1px"
             android:layout_marginLeft="100dp"
             android:layout_marginRight="5dp"
-            android:background="@color/colorPrimaryDark" />
+            android:background="@color/colorPrimaryDark"
+            android:layout_marginStart="100dp"
+            android:layout_marginEnd="5dp" />
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
